Practicas/P3/y.output
Estado 84 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: programa $end

    1 programa: cabecera_programa bloque

    2 cabecera_programa: MAIN

    3 bloque: inicio_de_bloque declar_de_variables_locales declar_de_subprogs sentencias fin_de_bloque

    4 inicio_de_bloque: INICIO

    5 fin_de_bloque: FINBLO

    6 declar_de_subprogs: declar_de_subprogs declar_subprog
    7                   | /* vacío */

    8 declar_subprog: cabecera_subprograma bloque

    9 cabecera_subprograma: PROCED IDENTIFICADOR PARIZ declar_parametros PARDER
   10                     | PROCED IDENTIFICADOR PARIZ PARDER

   11 declar_parametros: declar_parametros COMA TIPOSIMPLE iden
   12                  | TIPOSIMPLE iden
   13                  | error

   14 iden: IDENTIFICADOR
   15     | IDENTIFICADOR CORIZ expresion CORDER
   16     | IDENTIFICADOR CORIZ expresion COMA expresion CORDER

   17 declar_de_variables_locales: INICIOV TIPOSIMPLE linea FINV
   18                            | /* vacío */

   19 linea: elems TIPOSIMPLE elems
   20      | elems

   21 elems: iden COMA elems
   22      | iden PYC
   23      | error

   24 lista_variables: lista_variables COMA iden
   25                | iden

   26 sentencias: sentencias sentencia
   27           | sentencia

   28 sentencia: bloque
   29          | sentencia_asignacion
   30          | sentencia_if
   31          | sentencia_while
   32          | sentencia_entrada
   33          | sentencia_salida
   34          | procedimiento
   35          | sentencia_case
   36          | error

   37 sentencia_asignacion: iden ASIG expresion PYC

   38 expresion: PARIZ expresion PARDER
   39          | OPU expresion
   40          | expresion OPB_IG expresion
   41          | expresion OPB_REL expresion
   42          | expresion OPB_ADD expresion
   43          | expresion OPB_MUL expresion
   44          | expresion OPB_OR expresion
   45          | expresion OPB_AND expresion
   46          | expresion OPB_ARRAY_MUL expresion
   47          | iden
   48          | CONSTANTE
   49          | CONSTANTE_E
   50          | CARACTER
   51          | CADENA
   52          | procedimiento
   53          | agregados
   54          | error

   55 procedimiento: IDENTIFICADOR PARIZ lista_expresiones PARDER

   56 agregados: INICIO lista_expresiones FINBLO

   57 lista_expresiones: lista_expresiones COMA expresion
   58                  | expresion

   59 sentencia_if: alternativa_doble
   60             | alternativa_simple

   61 alternativa_simple: IF expresion sentencia

   62 alternativa_doble: IF expresion sentencia ELSE sentencia

   63 sentencia_while: WHILE PARIZ expresion PARDER sentencia

   64 sentencia_entrada: READ lista_variables PYC

   65 sentencia_salida: WRITE PARIZ lista_expresiones PARDER PYC

   66 sentencia_case: SWITCH PARIZ IDENTIFICADOR PARDER INICIO casos caso_por_defecto FINBLO

   67 casos: casos CASE opcion DOSP sentencias BREAK PYC
   68      | /* vacío */

   69 opcion: CONSTANTE_E
   70       | CARACTER

   71 caso_por_defecto: DEFAULT DOSP sentencias
   72                 | /* vacío */


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 13 23 36 54
MAIN (258) 2
INICIO (259) 4 56 66
FINBLO (260) 5 56 66
INICIOV (261) 17
FINV (262) 17
PYC (263) 22 37 64 65 67
COMA (264) 11 16 21 24 57
TIPOSIMPLE (265) 11 12 17 19
PROCED (266) 9 10
CORIZ (267) 15 16
CORDER (268) 15 16
IF (269) 61 62
ELSE (270) 62
WHILE (271) 63
READ (272) 64
WRITE (273) 65
SWITCH (274) 66
CASE (275) 67
DEFAULT (276) 71
DOSP (277) 67 71
BREAK (278) 67
CONSTANTE (279) 48
PARDER (280) 9 10 38 55 63 65 66
PARIZ (281) 9 10 38 55 63 65 66
CADENA (282) 51
IDENTIFICADOR (283) 9 10 14 15 16 55 66
CONSTANTE_E (284) 49 69
CARACTER (285) 50 70
ASIG (286) 37
OPU (287) 39
OPB_ARRAY_MUL (288) 46
OPB_OR (289) 44
OPB_AND (290) 45
OPB_IG (291) 40
OPB_REL (292) 41
OPB_ADD (293) 42
OPB_MUL (294) 43


No terminales con las reglas donde aparecen

$accept (40)
    en la izquierda: 0
programa (41)
    en la izquierda: 1, en la derecha: 0
cabecera_programa (42)
    en la izquierda: 2, en la derecha: 1
bloque (43)
    en la izquierda: 3, en la derecha: 1 8 28
inicio_de_bloque (44)
    en la izquierda: 4, en la derecha: 3
fin_de_bloque (45)
    en la izquierda: 5, en la derecha: 3
declar_de_subprogs (46)
    en la izquierda: 6 7, en la derecha: 3 6
declar_subprog (47)
    en la izquierda: 8, en la derecha: 6
cabecera_subprograma (48)
    en la izquierda: 9 10, en la derecha: 8
declar_parametros (49)
    en la izquierda: 11 12 13, en la derecha: 9 11
iden (50)
    en la izquierda: 14 15 16, en la derecha: 11 12 21 22 24 25 37
    47
declar_de_variables_locales (51)
    en la izquierda: 17 18, en la derecha: 3
linea (52)
    en la izquierda: 19 20, en la derecha: 17
elems (53)
    en la izquierda: 21 22 23, en la derecha: 19 20 21
lista_variables (54)
    en la izquierda: 24 25, en la derecha: 24 64
sentencias (55)
    en la izquierda: 26 27, en la derecha: 3 26 67 71
sentencia (56)
    en la izquierda: 28 29 30 31 32 33 34 35 36, en la derecha: 26
    27 61 62 63
sentencia_asignacion (57)
    en la izquierda: 37, en la derecha: 29
expresion (58)
    en la izquierda: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    54, en la derecha: 15 16 37 38 39 40 41 42 43 44 45 46 57 58 61
    62 63
procedimiento (59)
    en la izquierda: 55, en la derecha: 34 52
agregados (60)
    en la izquierda: 56, en la derecha: 53
lista_expresiones (61)
    en la izquierda: 57 58, en la derecha: 55 56 57 65
sentencia_if (62)
    en la izquierda: 59 60, en la derecha: 30
alternativa_simple (63)
    en la izquierda: 61, en la derecha: 60
alternativa_doble (64)
    en la izquierda: 62, en la derecha: 59
sentencia_while (65)
    en la izquierda: 63, en la derecha: 31
sentencia_entrada (66)
    en la izquierda: 64, en la derecha: 32
sentencia_salida (67)
    en la izquierda: 65, en la derecha: 33
sentencia_case (68)
    en la izquierda: 66, en la derecha: 35
casos (69)
    en la izquierda: 67 68, en la derecha: 66 67
opcion (70)
    en la izquierda: 69 70, en la derecha: 67
caso_por_defecto (71)
    en la izquierda: 71 72, en la derecha: 66


estado 0

    0 $accept: . programa $end

    MAIN  desplazar e ir al estado 1

    programa           ir al estado 2
    cabecera_programa  ir al estado 3


estado 1

    2 cabecera_programa: MAIN .

    $default  reduce usando la regla 2 (cabecera_programa)


estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


estado 3

    1 programa: cabecera_programa . bloque

    INICIO  desplazar e ir al estado 5

    bloque            ir al estado 6
    inicio_de_bloque  ir al estado 7


estado 4

    0 $accept: programa $end .

    $default  aceptar


estado 5

    4 inicio_de_bloque: INICIO .

    $default  reduce usando la regla 4 (inicio_de_bloque)


estado 6

    1 programa: cabecera_programa bloque .

    $default  reduce usando la regla 1 (programa)


estado 7

    3 bloque: inicio_de_bloque . declar_de_variables_locales declar_de_subprogs sentencias fin_de_bloque

    INICIOV  desplazar e ir al estado 8

    $default  reduce usando la regla 18 (declar_de_variables_locales)

    declar_de_variables_locales  ir al estado 9


estado 8

   17 declar_de_variables_locales: INICIOV . TIPOSIMPLE linea FINV

    TIPOSIMPLE  desplazar e ir al estado 10


estado 9

    3 bloque: inicio_de_bloque declar_de_variables_locales . declar_de_subprogs sentencias fin_de_bloque

    $default  reduce usando la regla 7 (declar_de_subprogs)

    declar_de_subprogs  ir al estado 11


estado 10

   17 declar_de_variables_locales: INICIOV TIPOSIMPLE . linea FINV

    error          desplazar e ir al estado 12
    IDENTIFICADOR  desplazar e ir al estado 13

    iden   ir al estado 14
    linea  ir al estado 15
    elems  ir al estado 16


estado 11

    3 bloque: inicio_de_bloque declar_de_variables_locales declar_de_subprogs . sentencias fin_de_bloque
    6 declar_de_subprogs: declar_de_subprogs . declar_subprog

    error          desplazar e ir al estado 17
    INICIO         desplazar e ir al estado 5
    PROCED         desplazar e ir al estado 18
    IF             desplazar e ir al estado 19
    WHILE          desplazar e ir al estado 20
    READ           desplazar e ir al estado 21
    WRITE          desplazar e ir al estado 22
    SWITCH         desplazar e ir al estado 23
    IDENTIFICADOR  desplazar e ir al estado 24

    bloque                ir al estado 25
    inicio_de_bloque      ir al estado 7
    declar_subprog        ir al estado 26
    cabecera_subprograma  ir al estado 27
    iden                  ir al estado 28
    sentencias            ir al estado 29
    sentencia             ir al estado 30
    sentencia_asignacion  ir al estado 31
    procedimiento         ir al estado 32
    sentencia_if          ir al estado 33
    alternativa_simple    ir al estado 34
    alternativa_doble     ir al estado 35
    sentencia_while       ir al estado 36
    sentencia_entrada     ir al estado 37
    sentencia_salida      ir al estado 38
    sentencia_case        ir al estado 39


estado 12

   23 elems: error .

    $default  reduce usando la regla 23 (elems)


estado 13

   14 iden: IDENTIFICADOR .
   15     | IDENTIFICADOR . CORIZ expresion CORDER
   16     | IDENTIFICADOR . CORIZ expresion COMA expresion CORDER

    CORIZ  desplazar e ir al estado 40

    $default  reduce usando la regla 14 (iden)


estado 14

   21 elems: iden . COMA elems
   22      | iden . PYC

    PYC   desplazar e ir al estado 41
    COMA  desplazar e ir al estado 42


estado 15

   17 declar_de_variables_locales: INICIOV TIPOSIMPLE linea . FINV

    FINV  desplazar e ir al estado 43


estado 16

   19 linea: elems . TIPOSIMPLE elems
   20      | elems .

    TIPOSIMPLE  desplazar e ir al estado 44

    $default  reduce usando la regla 20 (linea)


estado 17

   36 sentencia: error .

    $default  reduce usando la regla 36 (sentencia)


estado 18

    9 cabecera_subprograma: PROCED . IDENTIFICADOR PARIZ declar_parametros PARDER
   10                     | PROCED . IDENTIFICADOR PARIZ PARDER

    IDENTIFICADOR  desplazar e ir al estado 45


estado 19

   61 alternativa_simple: IF . expresion sentencia
   62 alternativa_doble: IF . expresion sentencia ELSE sentencia

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden           ir al estado 54
    expresion      ir al estado 55
    procedimiento  ir al estado 56
    agregados      ir al estado 57


estado 20

   63 sentencia_while: WHILE . PARIZ expresion PARDER sentencia

    PARIZ  desplazar e ir al estado 58


estado 21

   64 sentencia_entrada: READ . lista_variables PYC

    IDENTIFICADOR  desplazar e ir al estado 13

    iden             ir al estado 59
    lista_variables  ir al estado 60


estado 22

   65 sentencia_salida: WRITE . PARIZ lista_expresiones PARDER PYC

    PARIZ  desplazar e ir al estado 61


estado 23

   66 sentencia_case: SWITCH . PARIZ IDENTIFICADOR PARDER INICIO casos caso_por_defecto FINBLO

    PARIZ  desplazar e ir al estado 62


estado 24

   14 iden: IDENTIFICADOR .
   15     | IDENTIFICADOR . CORIZ expresion CORDER
   16     | IDENTIFICADOR . CORIZ expresion COMA expresion CORDER
   55 procedimiento: IDENTIFICADOR . PARIZ lista_expresiones PARDER

    CORIZ  desplazar e ir al estado 40
    PARIZ  desplazar e ir al estado 63

    $default  reduce usando la regla 14 (iden)


estado 25

   28 sentencia: bloque .

    $default  reduce usando la regla 28 (sentencia)


estado 26

    6 declar_de_subprogs: declar_de_subprogs declar_subprog .

    $default  reduce usando la regla 6 (declar_de_subprogs)


estado 27

    8 declar_subprog: cabecera_subprograma . bloque

    INICIO  desplazar e ir al estado 5

    bloque            ir al estado 64
    inicio_de_bloque  ir al estado 7


estado 28

   37 sentencia_asignacion: iden . ASIG expresion PYC

    ASIG  desplazar e ir al estado 65


estado 29

    3 bloque: inicio_de_bloque declar_de_variables_locales declar_de_subprogs sentencias . fin_de_bloque
   26 sentencias: sentencias . sentencia

    error          desplazar e ir al estado 17
    INICIO         desplazar e ir al estado 5
    FINBLO         desplazar e ir al estado 66
    IF             desplazar e ir al estado 19
    WHILE          desplazar e ir al estado 20
    READ           desplazar e ir al estado 21
    WRITE          desplazar e ir al estado 22
    SWITCH         desplazar e ir al estado 23
    IDENTIFICADOR  desplazar e ir al estado 24

    bloque                ir al estado 25
    inicio_de_bloque      ir al estado 7
    fin_de_bloque         ir al estado 67
    iden                  ir al estado 28
    sentencia             ir al estado 68
    sentencia_asignacion  ir al estado 31
    procedimiento         ir al estado 32
    sentencia_if          ir al estado 33
    alternativa_simple    ir al estado 34
    alternativa_doble     ir al estado 35
    sentencia_while       ir al estado 36
    sentencia_entrada     ir al estado 37
    sentencia_salida      ir al estado 38
    sentencia_case        ir al estado 39


estado 30

   27 sentencias: sentencia .

    $default  reduce usando la regla 27 (sentencias)


estado 31

   29 sentencia: sentencia_asignacion .

    $default  reduce usando la regla 29 (sentencia)


estado 32

   34 sentencia: procedimiento .

    $default  reduce usando la regla 34 (sentencia)


estado 33

   30 sentencia: sentencia_if .

    $default  reduce usando la regla 30 (sentencia)


estado 34

   60 sentencia_if: alternativa_simple .

    $default  reduce usando la regla 60 (sentencia_if)


estado 35

   59 sentencia_if: alternativa_doble .

    $default  reduce usando la regla 59 (sentencia_if)


estado 36

   31 sentencia: sentencia_while .

    $default  reduce usando la regla 31 (sentencia)


estado 37

   32 sentencia: sentencia_entrada .

    $default  reduce usando la regla 32 (sentencia)


estado 38

   33 sentencia: sentencia_salida .

    $default  reduce usando la regla 33 (sentencia)


estado 39

   35 sentencia: sentencia_case .

    $default  reduce usando la regla 35 (sentencia)


estado 40

   15 iden: IDENTIFICADOR CORIZ . expresion CORDER
   16     | IDENTIFICADOR CORIZ . expresion COMA expresion CORDER

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden           ir al estado 54
    expresion      ir al estado 69
    procedimiento  ir al estado 56
    agregados      ir al estado 57


estado 41

   22 elems: iden PYC .

    $default  reduce usando la regla 22 (elems)


estado 42

   21 elems: iden COMA . elems

    error          desplazar e ir al estado 12
    IDENTIFICADOR  desplazar e ir al estado 13

    iden   ir al estado 14
    elems  ir al estado 70


estado 43

   17 declar_de_variables_locales: INICIOV TIPOSIMPLE linea FINV .

    $default  reduce usando la regla 17 (declar_de_variables_locales)


estado 44

   19 linea: elems TIPOSIMPLE . elems

    error          desplazar e ir al estado 12
    IDENTIFICADOR  desplazar e ir al estado 13

    iden   ir al estado 14
    elems  ir al estado 71


estado 45

    9 cabecera_subprograma: PROCED IDENTIFICADOR . PARIZ declar_parametros PARDER
   10                     | PROCED IDENTIFICADOR . PARIZ PARDER

    PARIZ  desplazar e ir al estado 72


estado 46

   54 expresion: error .

    $default  reduce usando la regla 54 (expresion)


estado 47

   56 agregados: INICIO . lista_expresiones FINBLO

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden               ir al estado 54
    expresion          ir al estado 73
    procedimiento      ir al estado 56
    agregados          ir al estado 57
    lista_expresiones  ir al estado 74


estado 48

   48 expresion: CONSTANTE .

    $default  reduce usando la regla 48 (expresion)


estado 49

   38 expresion: PARIZ . expresion PARDER

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden           ir al estado 54
    expresion      ir al estado 75
    procedimiento  ir al estado 56
    agregados      ir al estado 57


estado 50

   51 expresion: CADENA .

    $default  reduce usando la regla 51 (expresion)


estado 51

   49 expresion: CONSTANTE_E .

    $default  reduce usando la regla 49 (expresion)


estado 52

   50 expresion: CARACTER .

    $default  reduce usando la regla 50 (expresion)


estado 53

   39 expresion: OPU . expresion

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden           ir al estado 54
    expresion      ir al estado 76
    procedimiento  ir al estado 56
    agregados      ir al estado 57


estado 54

   47 expresion: iden .

    $default  reduce usando la regla 47 (expresion)


estado 55

   40 expresion: expresion . OPB_IG expresion
   41          | expresion . OPB_REL expresion
   42          | expresion . OPB_ADD expresion
   43          | expresion . OPB_MUL expresion
   44          | expresion . OPB_OR expresion
   45          | expresion . OPB_AND expresion
   46          | expresion . OPB_ARRAY_MUL expresion
   61 alternativa_simple: IF expresion . sentencia
   62 alternativa_doble: IF expresion . sentencia ELSE sentencia

    error          desplazar e ir al estado 17
    INICIO         desplazar e ir al estado 5
    IF             desplazar e ir al estado 19
    WHILE          desplazar e ir al estado 20
    READ           desplazar e ir al estado 21
    WRITE          desplazar e ir al estado 22
    SWITCH         desplazar e ir al estado 23
    IDENTIFICADOR  desplazar e ir al estado 24
    OPB_ARRAY_MUL  desplazar e ir al estado 77
    OPB_OR         desplazar e ir al estado 78
    OPB_AND        desplazar e ir al estado 79
    OPB_IG         desplazar e ir al estado 80
    OPB_REL        desplazar e ir al estado 81
    OPB_ADD        desplazar e ir al estado 82
    OPB_MUL        desplazar e ir al estado 83

    bloque                ir al estado 25
    inicio_de_bloque      ir al estado 7
    iden                  ir al estado 28
    sentencia             ir al estado 84
    sentencia_asignacion  ir al estado 31
    procedimiento         ir al estado 32
    sentencia_if          ir al estado 33
    alternativa_simple    ir al estado 34
    alternativa_doble     ir al estado 35
    sentencia_while       ir al estado 36
    sentencia_entrada     ir al estado 37
    sentencia_salida      ir al estado 38
    sentencia_case        ir al estado 39


estado 56

   52 expresion: procedimiento .

    $default  reduce usando la regla 52 (expresion)


estado 57

   53 expresion: agregados .

    $default  reduce usando la regla 53 (expresion)


estado 58

   63 sentencia_while: WHILE PARIZ . expresion PARDER sentencia

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden           ir al estado 54
    expresion      ir al estado 85
    procedimiento  ir al estado 56
    agregados      ir al estado 57


estado 59

   25 lista_variables: iden .

    $default  reduce usando la regla 25 (lista_variables)


estado 60

   24 lista_variables: lista_variables . COMA iden
   64 sentencia_entrada: READ lista_variables . PYC

    PYC   desplazar e ir al estado 86
    COMA  desplazar e ir al estado 87


estado 61

   65 sentencia_salida: WRITE PARIZ . lista_expresiones PARDER PYC

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden               ir al estado 54
    expresion          ir al estado 73
    procedimiento      ir al estado 56
    agregados          ir al estado 57
    lista_expresiones  ir al estado 88


estado 62

   66 sentencia_case: SWITCH PARIZ . IDENTIFICADOR PARDER INICIO casos caso_por_defecto FINBLO

    IDENTIFICADOR  desplazar e ir al estado 89


estado 63

   55 procedimiento: IDENTIFICADOR PARIZ . lista_expresiones PARDER

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden               ir al estado 54
    expresion          ir al estado 73
    procedimiento      ir al estado 56
    agregados          ir al estado 57
    lista_expresiones  ir al estado 90


estado 64

    8 declar_subprog: cabecera_subprograma bloque .

    $default  reduce usando la regla 8 (declar_subprog)


estado 65

   37 sentencia_asignacion: iden ASIG . expresion PYC

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden           ir al estado 54
    expresion      ir al estado 91
    procedimiento  ir al estado 56
    agregados      ir al estado 57


estado 66

    5 fin_de_bloque: FINBLO .

    $default  reduce usando la regla 5 (fin_de_bloque)


estado 67

    3 bloque: inicio_de_bloque declar_de_variables_locales declar_de_subprogs sentencias fin_de_bloque .

    $default  reduce usando la regla 3 (bloque)


estado 68

   26 sentencias: sentencias sentencia .

    $default  reduce usando la regla 26 (sentencias)


estado 69

   15 iden: IDENTIFICADOR CORIZ expresion . CORDER
   16     | IDENTIFICADOR CORIZ expresion . COMA expresion CORDER
   40 expresion: expresion . OPB_IG expresion
   41          | expresion . OPB_REL expresion
   42          | expresion . OPB_ADD expresion
   43          | expresion . OPB_MUL expresion
   44          | expresion . OPB_OR expresion
   45          | expresion . OPB_AND expresion
   46          | expresion . OPB_ARRAY_MUL expresion

    COMA           desplazar e ir al estado 92
    CORDER         desplazar e ir al estado 93
    OPB_ARRAY_MUL  desplazar e ir al estado 77
    OPB_OR         desplazar e ir al estado 78
    OPB_AND        desplazar e ir al estado 79
    OPB_IG         desplazar e ir al estado 80
    OPB_REL        desplazar e ir al estado 81
    OPB_ADD        desplazar e ir al estado 82
    OPB_MUL        desplazar e ir al estado 83


estado 70

   21 elems: iden COMA elems .

    $default  reduce usando la regla 21 (elems)


estado 71

   19 linea: elems TIPOSIMPLE elems .

    $default  reduce usando la regla 19 (linea)


estado 72

    9 cabecera_subprograma: PROCED IDENTIFICADOR PARIZ . declar_parametros PARDER
   10                     | PROCED IDENTIFICADOR PARIZ . PARDER

    error       desplazar e ir al estado 94
    TIPOSIMPLE  desplazar e ir al estado 95
    PARDER      desplazar e ir al estado 96

    declar_parametros  ir al estado 97


estado 73

   40 expresion: expresion . OPB_IG expresion
   41          | expresion . OPB_REL expresion
   42          | expresion . OPB_ADD expresion
   43          | expresion . OPB_MUL expresion
   44          | expresion . OPB_OR expresion
   45          | expresion . OPB_AND expresion
   46          | expresion . OPB_ARRAY_MUL expresion
   58 lista_expresiones: expresion .

    OPB_ARRAY_MUL  desplazar e ir al estado 77
    OPB_OR         desplazar e ir al estado 78
    OPB_AND        desplazar e ir al estado 79
    OPB_IG         desplazar e ir al estado 80
    OPB_REL        desplazar e ir al estado 81
    OPB_ADD        desplazar e ir al estado 82
    OPB_MUL        desplazar e ir al estado 83

    $default  reduce usando la regla 58 (lista_expresiones)


estado 74

   56 agregados: INICIO lista_expresiones . FINBLO
   57 lista_expresiones: lista_expresiones . COMA expresion

    FINBLO  desplazar e ir al estado 98
    COMA    desplazar e ir al estado 99


estado 75

   38 expresion: PARIZ expresion . PARDER
   40          | expresion . OPB_IG expresion
   41          | expresion . OPB_REL expresion
   42          | expresion . OPB_ADD expresion
   43          | expresion . OPB_MUL expresion
   44          | expresion . OPB_OR expresion
   45          | expresion . OPB_AND expresion
   46          | expresion . OPB_ARRAY_MUL expresion

    PARDER         desplazar e ir al estado 100
    OPB_ARRAY_MUL  desplazar e ir al estado 77
    OPB_OR         desplazar e ir al estado 78
    OPB_AND        desplazar e ir al estado 79
    OPB_IG         desplazar e ir al estado 80
    OPB_REL        desplazar e ir al estado 81
    OPB_ADD        desplazar e ir al estado 82
    OPB_MUL        desplazar e ir al estado 83


estado 76

   39 expresion: OPU expresion .
   40          | expresion . OPB_IG expresion
   41          | expresion . OPB_REL expresion
   42          | expresion . OPB_ADD expresion
   43          | expresion . OPB_MUL expresion
   44          | expresion . OPB_OR expresion
   45          | expresion . OPB_AND expresion
   46          | expresion . OPB_ARRAY_MUL expresion

    OPB_ARRAY_MUL  desplazar e ir al estado 77
    OPB_OR         desplazar e ir al estado 78
    OPB_AND        desplazar e ir al estado 79
    OPB_IG         desplazar e ir al estado 80
    OPB_REL        desplazar e ir al estado 81
    OPB_ADD        desplazar e ir al estado 82
    OPB_MUL        desplazar e ir al estado 83

    $default  reduce usando la regla 39 (expresion)


estado 77

   46 expresion: expresion OPB_ARRAY_MUL . expresion

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden           ir al estado 54
    expresion      ir al estado 101
    procedimiento  ir al estado 56
    agregados      ir al estado 57


estado 78

   44 expresion: expresion OPB_OR . expresion

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden           ir al estado 54
    expresion      ir al estado 102
    procedimiento  ir al estado 56
    agregados      ir al estado 57


estado 79

   45 expresion: expresion OPB_AND . expresion

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden           ir al estado 54
    expresion      ir al estado 103
    procedimiento  ir al estado 56
    agregados      ir al estado 57


estado 80

   40 expresion: expresion OPB_IG . expresion

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden           ir al estado 54
    expresion      ir al estado 104
    procedimiento  ir al estado 56
    agregados      ir al estado 57


estado 81

   41 expresion: expresion OPB_REL . expresion

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden           ir al estado 54
    expresion      ir al estado 105
    procedimiento  ir al estado 56
    agregados      ir al estado 57


estado 82

   42 expresion: expresion OPB_ADD . expresion

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden           ir al estado 54
    expresion      ir al estado 106
    procedimiento  ir al estado 56
    agregados      ir al estado 57


estado 83

   43 expresion: expresion OPB_MUL . expresion

    error          desplazar e ir al estado 46
    INICIO         desplazar e ir al estado 47
    CONSTANTE      desplazar e ir al estado 48
    PARIZ          desplazar e ir al estado 49
    CADENA         desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 24
    CONSTANTE_E    desplazar e ir al estado 51
    CARACTER       desplazar e ir al estado 52
    OPU            desplazar e ir al estado 53

    iden           ir al estado 54
    expresion      ir al estado 107
    procedimiento  ir al estado 56
    agregados      ir al estado 57


estado 84

   61 alternativa_simple: IF expresion sentencia .
   62 alternativa_doble: IF expresion sentencia . ELSE sentencia

    ELSE  desplazar e ir al estado 108

    ELSE      [reduce usando la regla 61 (alternativa_simple)]
    $default  reduce usando la regla 61 (alternativa_simple)


estado 85

   40 expresion: expresion . OPB_IG expresion
   41          | expresion . OPB_REL expresion
   42          | expresion . OPB_ADD expresion
   43          | expresion . OPB_MUL expresion
   44          | expresion . OPB_OR expresion
   45          | expresion . OPB_AND expresion
   46          | expresion . OPB_ARRAY_MUL expresion
   63 sentencia_while: WHILE PARIZ expresion . PARDER sentencia
